GNOME Bugzilla – Bug 703426
Fix doc and comment references to gstrtpbin element
Last modified: 2013-07-02 08:14:05 UTC
Created attachment 248189 [details] [review] Corrects some of the references to "gstrtpbin" by replacing them with references to "rtpbin. Documents in git make reference to a non-existent gstrtpbin element. The element is now named rtpbin. This is troublesome particularly in examples involving gst-launch lines. My git hash is 66dbe3151a3426f6de271c2999ee908a8e89b65c The attached patch corrects some of the references to "gstrtpbin" by replacing them with references to "rtpbin."
commit f01b751e5258ba26a508d0ee2e8a3540e1211bf1 Author: J. Rick Ramstetter <rick.ramstetter@gmail.com> Date: Tue Jul 2 10:12:17 2013 +0200 rtp: Fix documentation and comments to use rtpbin instead of old gstrtpbin https://bugzilla.gnome.org/show_bug.cgi?id=703426