rtp: Fix documentation and comments to use rtpbin instead of old gstrtpbin

https://bugzilla.gnome.org/show_bug.cgi?id=703426